pending changs to be cmmitted
